@@ -110,6 +110,9 @@
 	preference for images in PostScript or PDF output (STR
 	#8)</li>
 
+	<li>The DT element no longer applies an italic style (PR
+	#5178)</li>
+
 	<H3 _HD_OMIT_TOC>Bug Fixes</H3>
 
 	<LI>Switching between landscape and portrait orientations
